# casml4se-stonkswagen

./: .env.example  .gitignore  GEMINI.md  README.md  agents.md  check_data.py  initialize_all.sh  main.py  pyproject.toml  test_data.py  test_data_fixed.py  test_forecast.py  test_training.py
apps/: README.md
apps/api/: main.py
apps/streamlit/: app_header.py  evaluation_app.py  forecast_app.py  gw2_app.py  item_analysis_app.py  item_finder_app.py  pretrained_models_app.py
data/: README.md
docs/: DataProcessing.md  README.md  create_read_only_user.md
docs/ai-docs/: apps-spezifikation.md  gpu-optimierungen.md  infrastruktur-diagram.md  todo-bilder-metriken.md
docs/database/: gw2bltc_historical_prices_preview.md  gw2bltc_historical_prices_schema.md  gw2tp_historical_prices_preview.md  gw2tp_historical_prices_schema.md  items_preview.md  items_schema.md  prices_preview.md  prices_schema.md  public_tables.md
docs/rl-spec-codex/: README.md
infra/: README.md
infra/MLFlow/: .env.example  README.md  docker-compose.yml
ml/: README.md  pyproject.toml
ml/common/: README.md  __init__.py  database.py  folder_s3_sync.py  historical.py
ml/common/dataRetriever/: data_retriever.py  examples.py
ml/common/database/: __init__.py  client.py  queries.py
ml/models/: README.md
ml/pipelines/: README.md
ml/tests/: README.md  test_database.py
models/: README.md  notes.md
notebooks/: ARIMA_SPEED_OPTIMIZATION.md  README.md  backtest_horizon_explanation.md  data_leakage_fix_verification.ipynb  exploratory_data_analysis.ipynb  generate_screenshots.ipynb  pyproject.toml  simple_correlation.ipynb
notebooks/database/: analyze-gw2-data.ipynb  database-helpers-demo.ipynb  database-overview.ipynb
notebooks/gw2tp/: gw2tp_get_most_demand.ipynb
notebooks/models/: Readme.md  arima_analysis.ipynb  evaluations.ipynb  evaluations.py  experiment.py  exponential_smoothing_analysis.ipynb  gw2_arima.ipynb  gw2ml.py  mlflow_example.ipynb  test_arima_quickstart.py  xgboost_analysis.ipynb  yahoo_finance_comparison.ipynb
notebooks/models/baseline_data/: retrieve_baseline_data_bluechips.ipynb  retrieve_baseline_data_cryptos.ipynb  retrieve_baseline_data_gw2.ipynb  retrieve_baseline_data_gw2_chunked.ipynb
notebooks/models/daniel_fabrice_wp/: README.md  __init__.py  data_preparation.py  dataset.py  experiment.py  gridsearch.py  model.py  trial_advanced.py  trial_simple.py
notebooks/models/model_arima/: VectorArima.md  arima.md  gw2_VectorArima.ipynb  gw2_arima.ipynb
notebooks/models/model_lightgbm/: gw2_lightgbm.ipynb
notebooks/models/model_prophet/: gw2_Prophet.ipynb
notebooks/models/model_xgboost/: gw2_XGBoost.ipynb  gw2_XGBoost_Covariates.ipynb
notebooks/models/wp_lusis_fabrice_daniel/: 00_data_retrieval.ipynb  01_augmented_dickey_fuller.ipynb  02_augmented_dickey_fuller_simple_returns.ipynb  02_data_preparation.ipynb  03_data_preparation.ipynb  Implementation Hints.md  adf_evaluation.ipynb
notebooks/utils/: root_path.py  setup_gw2ml.py
rl-spec-claude/: 00-overview.md  01-rl-environment.md  02-architecture.md  03-implementation-plan.md
scripts/: README.md  benchmark_models.py  check_pytorch.py  compute_price_correlations.py  fetch_all_prices.py  init_ml_project.sh  run_eval.sh  run_ml_tests.py  scan_tp_opportunities.py  show_devices.py  upload_data_to_s3.py
specs/: pipeline_and_models.md  pipeline_flowchart.md  pipeline_simple_overview.md
src/gw2ml/: README.md  __init__.py  paths.py
src/gw2ml/data/: __init__.py  database_queries.py  loaders.py  retriever.py  s3_sync.py
src/gw2ml/evaluation/: __init__.py  adf.py  backtest.py  market_scan.py  plot.py  plotting.py  price_file_scan.py  transform.py
src/gw2ml/features/: processing.py
src/gw2ml/metrics/: registry.py
src/gw2ml/modeling/: __init__.py  arima.py  artifacts.py  base.py  chronos.py  exponential_smoothing.py  registry.py  xgboost.py  xgboost_model.py  xgboost_old.py
src/gw2ml/pipeline/: data_preparation.py  feature_hooks.py  train_arima.py
src/gw2ml/pipelines/: __init__.py  config.py  forecast.py  train.py
src/gw2ml/serving/: __init__.py
src/gw2ml/serving/arima/: __init__.py  api.py
src/gw2ml/utils/: __init__.py  logging.py  query_params.py
tests/: README.md  case_registry.py  test_arima_model.py  test_backtest.py  test_base_model.py  test_database.py  test_exponential_smoothing_model.py  test_feature_hooks.py  test_loaders.py  test_model_registry.py  test_modeling_arima.py  test_s3_sync.py  test_xgboost.py  test_xgboost_model.py
