[project]
name = "casml4se-stonkswagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "darts==0.40.0",
    "dogpile-cache>=1.5.0",
    "fastapi>=0.122.0",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "torch>=2.11.0a0",
    "torchaudio>=2.10.0a0",
    "torchvision>=0.25.0a0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://rocm.nightlies.amd.com/v2/gfx1151/"

[dependency-groups]
dev = [
    "boto3>=1.41.3",
    "moto>=5.0.0",
    "catboost>=1.2.8",
    "darts>=0.39.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "massive>=2.0.2",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.13",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "statsforecast>=2.0.3",
    "tqdm>=4.66.0",
    "xgboost>=3.1.2",
    "yfinance>=0.2.50",
]
