[project]
name = "casml4se-stonkswagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "darts==0.40.0",
    "dogpile-cache>=1.5.0",
    "fastapi[standard]>=0.122.0",
    "kaleido>=1.2.0",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
    # Note: torch/torchaudio/torchvision moved to dependency groups below
    # Install the appropriate group based on your hardware:
    #   macOS: uv sync --group cpu
    #   Linux + AMD GPU: uv sync --group rocm --index-url https://rocm.nightlies.amd.com/v2/gfx1151/
    #   Linux + NVIDIA GPU: uv sync --group cuda --index-url https://download.pytorch.org/whl/cu121
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ROCm index removed from global config - specify via CLI when needed
# [[tool.uv.index]]
# url = "https://rocm.nightlies.amd.com/v2/gfx1151/"

[dependency-groups]
# PyTorch dependency groups - install one based on your hardware
# Note: ROCm and CUDA groups use version ranges compatible with PyPI
# The --extra-index-url flag will prioritize GPU-specific builds when available
cpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
]
rocm = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
]
cuda = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
]

dev = [
    "boto3>=1.41.3",
    "moto>=5.0.0",
    "catboost>=1.2.8",
    "darts>=0.39.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "massive>=2.0.2",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.13",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "statsforecast>=2.0.3",
    "tqdm>=4.66.0",
    "xgboost>=3.1.2",
    "yfinance>=0.2.50",
]
