[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.9.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.3",
    "sqlalchemy>=2.0.44",
]
