[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.75",
    "darts>=0.38.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.9.2",
    "mlflow>=3.6.0",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "psycopg[binary]>=3.2.3",
    "sqlalchemy>=2.0.44",
    "statsforecast>=2.0.3",
    "xgboost>=3.1.1",
]
